--- a/package.json
+++ b/package.json
@@ -4,5 +4,15 @@
   "description": "Adds adhoc cases to your Redux reducer",
   "main": "src/index.js",
   "author": "Kyle Shevlin <kyle.a.shevlin@gmail.com> (http://kyleshevlin.com)",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
+  "devDependencies": {
+    "babel-core": "^6.24.1",
+    "babel-jest": "^19.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "jest": "^19.0.2"
+  }
 }
