--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
   "author": "Kyle Shevlin <kyle.a.shevlin@gmail.com> (http://kyleshevlin.com)",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint ./src",
     "test": "jest",
+    "coverage": "jest --coverage",
     "test:watch": "jest --watch"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-jest": "^19.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-node": "^4.2.2",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "jest": "^19.0.2"
   }
 }
