--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "name": "radhoc",
   "version": "0.1.0",
   "description": "Adds adhoc cases to your Redux reducer",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "author": "Kyle Shevlin <kyle.a.shevlin@gmail.com> (http://kyleshevlin.com)",
   "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "babel --out-dir dist src",
     "lint": "eslint ./src",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
-    "validate": "npm-run-all --parallel lint test"
+    "validate": "npm-run-all --parallel lint test build"
   },
   "config": {
     "ghooks": {
@@ -17,6 +22,7 @@
     }
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-jest": "^19.0.0",
     "babel-preset-es2015": "^6.24.1",
@@ -28,6 +34,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "ghooks": "^2.0.0",
     "jest": "^19.0.2",
-    "npm-run-all": "^4.0.2"
+    "npm-run-all": "^4.0.2",
+    "rimraf": "^2.6.1"
   }
 }
