--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
   "files": [
     "dist"
   ],
+  "main": "dist/index.umd.js",
+  "module": "src/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "babel --out-dir dist src",
+    "build": "npm-run-all --parallel build:*",
+    "build:main": "babel --out-dir dist src",
+    "build:umd": "webpack --output-filename index.umd.js",
+    "build:umd.min": "webpack -p --output-filename index.umd.min.js",
     "lint": "eslint ./src",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
@@ -25,6 +30,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-jest": "^19.0.0",
+    "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
@@ -35,6 +41,7 @@
     "ghooks": "^2.0.0",
     "jest": "^19.0.2",
     "npm-run-all": "^4.0.2",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "webpack": "^2.4.1"
   }
 }
