--- a/package.json
+++ b/package.json
@@ -2,13 +2,12 @@
   "name": "radhoc",
   "version": "0.1.0",
   "description": "Adds adhoc cases to your Redux reducer",
-  "main": "dist/index.js",
+  "main": "dist/index.umd.js",
   "author": "Kyle Shevlin <kyle.a.shevlin@gmail.com> (http://kyleshevlin.com)",
   "license": "MIT",
   "files": [
     "dist"
   ],
-  "main": "dist/index.umd.js",
   "module": "src/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
@@ -19,6 +18,7 @@
     "lint": "eslint ./src",
     "test": "jest --coverage",
     "test:watch": "jest --watch",
+    "report-coverage": "cat ./coverage/lcov.info | codecov",
     "validate": "npm-run-all --parallel lint test build"
   },
   "config": {
@@ -32,6 +32,7 @@
     "babel-jest": "^19.0.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
+    "codecov": "^2.1.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
     "eslint-plugin-import": "^2.2.0",
