--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "radhoc",
-  "version": "0.1.0",
+  "version": "0.0.0-semantically-released",
   "description": "Adds adhoc cases to your Redux reducer",
   "main": "dist/index.js",
   "author": "Kyle Shevlin <kyle.a.shevlin@gmail.com> (http://kyleshevlin.com)",
@@ -10,6 +10,7 @@
   ],
   "module": "src/index.js",
   "scripts": {
+    "commit": "git-cz",
     "prebuild": "rimraf dist",
     "build": "npm-run-all --parallel build:*",
     "build:main": "babel --out-dir dist src",
@@ -19,11 +20,16 @@
     "test": "jest --coverage",
     "test:watch": "jest --watch",
     "report-coverage": "cat ./coverage/lcov.info | codecov",
+    "release": "semantic-release-cli pre && yarn publish && semantic-release-cli post",
     "validate": "npm-run-all --parallel lint test build"
   },
   "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    },
     "ghooks": {
-      "pre-commit": "yarn run validate"
+      "pre-commit": "yarn run validate",
+      "commit-msg": "validate-commit-msg"
     }
   },
   "devDependencies": {
@@ -33,6 +39,8 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "codecov": "^2.1.0",
+    "commitizen": "^2.9.6",
+    "cz-conventional-changelog": "^2.0.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
     "eslint-plugin-import": "^2.2.0",
@@ -43,6 +51,8 @@
     "jest": "^19.0.2",
     "npm-run-all": "^4.0.2",
     "rimraf": "^2.6.1",
+    "semantic-release": "^6.3.2",
+    "validate-commit-msg": "^2.12.1",
     "webpack": "^2.4.1"
   }
 }
