--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,18 @@ language: node_js
 cache:
   directories:
     - node_modules
-node_js: 6
-branches:
-  only:
-    - master
 notifications:
   email: false
+node_js:
+  - '7'
+  - '6'
+before_script:
+  - npm prune
 script:
   - yarn run validate
 after_success:
   - yarn run report-coverage
-  - yarn run release
+  - npm run semantic-release
+branches:
+  only:
+    - master
